--- a/src/package.json
+++ b/src/package.json
@@ -10,11 +10,14 @@
     "cookie-parser": "^1.4.3",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-ws": "^2.0.0",
     "jade": "^1.11.0",
     "morgan": "^1.7.0",
+    "pty.js": "^0.3.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "xterm": "^1.1.3"
   },
   "main": "app.js",
   "directories": {
