--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.14.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-react-views": "^0.10.2",
+    "mongoose": "^4.5.10",
     "morgan": "^1.7.0",
     "pty.js": "^0.3.1",
     "pug": "^2.0.0-beta6",
