--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-react-views": "^0.10.2",
+    "helmet": "^2.1.2",
     "mongoose": "^4.5.10",
     "morgan": "^1.7.0",
     "pty.js": "^0.3.1",
