--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.2",
     "child_process": "^1.0.2",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.1",
     "crypto-js": "^3.1.6",
     "debug": "^2.2.0",
     "express": "^4.14.0",
