--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "request": "^2.74.0",
     "serve-favicon": "^2.3.0",
     "xterm": "^1.1.3"
   },
